--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 <p class="p1">&lt;body&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;header&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;h1&gt;Felipe Garrett&lt;/h1&gt;</p>
-<p class="p1"><span class="Apple-converted-space">        </span>&lt;h2&gt;Aspiring Mathematician and Consultant&lt;/h2&gt;</p>
+<p class="p1"><span class="Apple-converted-space">        </span>&lt;h2&gt;Aspiring Mathematician&lt;/h2&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;/header&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;section&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;h2&gt;Personal Information&lt;/h2&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;p&gt;&lt;strong&gt;Date of Birth:&lt;/strong&gt; 20th July 2004&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;p&gt;&lt;strong&gt;Origin:&lt;/strong&gt; La Paz, Bolivia&lt;/p&gt;</p>
-<p class="p1"><span class="Apple-converted-space">        </span>&lt;p&gt;&lt;strong&gt;Current Location:&lt;/strong&gt; University of Notre Dame, USA&lt;/p&gt;</p>
+<p class="p1"><span class="Apple-converted-space">        </span>&lt;p&gt;&lt;strong&gt;Current Location:&lt;/strong&gt; University of Notre Dame, United States&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;p&gt;&lt;strong&gt;Major:&lt;/strong&gt; Applied and Computational Mathematics and Statistics (ACMS)&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;p&gt;&lt;strong&gt;Contact:&lt;/strong&gt; fgarret2@nd.edu | +1 (312) 978-5485&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;p&gt;&lt;strong&gt;LinkedIn:&lt;/strong&gt; &lt;a href="https://www.linkedin.com/in/felipe-garrett-larrabure/" target="_blank"&gt;Felipe Garrett's LinkedIn&lt;/a&gt;&lt;/p&gt;</p>
