--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;p&gt;&lt;strong&gt;Major:&lt;/strong&gt; Applied and Computational Mathematics and Statistics (ACMS)&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;p&gt;&lt;strong&gt;Contact:&lt;/strong&gt; fgarret2@nd.edu | +1 (312) 978-5485&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;p&gt;&lt;strong&gt;LinkedIn:&lt;/strong&gt; &lt;a href="https://www.linkedin.com/in/felipe-garrett-larrabure/" target="_blank"&gt;Felipe Garrett's LinkedIn&lt;/a&gt;&lt;/p&gt;</p>
-<p class="p1"><span class="Apple-converted-space">        </span>&lt;img src="images/Screenshot 2024-12-04 at 8.17.00 PM.png" alt="Felipe Garrett Personal Picture"&gt;</p>
+<p class="p1"><span class="Apple-converted-space">        </span>&lt;img src=“PERSONAL.jpg” alt="Felipe Garrett Personal Picture"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;/section&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;section&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;h2&gt;Education&lt;/h2&gt;</p>
@@ -99,7 +99,7 @@
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;div&gt;</p>
 <p class="p1"><span class="Apple-converted-space">            </span>&lt;h3&gt;Banco Nacional de Bolivia&lt;/h3&gt;</p>
 <p class="p1"><span class="Apple-converted-space">            </span>&lt;p&gt;Fixed mathematical models for RORAC systems.&lt;/p&gt;</p>
-<p class="p1"><span class="Apple-converted-space">            </span>&lt;img src="images/Screenshot 2024-12-04 at 8.20.14 PM.png" alt="Banco Nacional de Bolivia"&gt;</p>
+<p class="p1"><span class="Apple-converted-space">            </span>&lt;img src=“BNB.jpg” alt="Banco Nacional de Bolivia"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;/div&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;div&gt;</p>
 <p class="p1"><span class="Apple-converted-space">            </span>&lt;h3&gt;Fundación SOLYDES&lt;/h3&gt;</p>
@@ -116,7 +116,7 @@
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;h2&gt;Tutoring&lt;/h2&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;div class="tutoring"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">            </span>&lt;p&gt;&lt;strong&gt;Learning Resource Center:&lt;/strong&gt; Mathematics Tutor for Precalculus and Calculus.&lt;/p&gt;</p>
-<p class="p1"><span class="Apple-converted-space">            </span>&lt;img src="images/Screenshot 2024-12-04 at 8.23.53 PM.png" alt="Learning Resource Center"&gt;</p>
+<p class="p1"><span class="Apple-converted-space">            </span>&lt;img src="images/LRC.jpg” alt="Learning Resource Center"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">            </span>&lt;p&gt;&lt;strong&gt;Center of the Study of Languages and Cultures:&lt;/strong&gt; Spanish Tutor for courses from levels 100 to 400.&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">            </span>&lt;img src="images/cslc.png" alt="CSLC Logo"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;/div&gt;</p>
@@ -125,7 +125,7 @@
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;h2&gt;Athletics&lt;/h2&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;p&gt;Professional Soccer Player for Club The Strongest, Bolivian Professional Soccer League.&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;p&gt;Captain of the Reserve Team: Led the pre-professional team.&lt;/p&gt;</p>
-<p class="p1"><span class="Apple-converted-space">        </span>&lt;img src="images/Screenshot 2024-12-04 at 8.26.36 PM.png" alt="Felipe Garrett Playing Soccer"&gt;</p>
+<p class="p1"><span class="Apple-converted-space">        </span>&lt;img src=“SOCCER.jpg” alt="Felipe Garrett Playing Soccer"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;/section&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;section&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;h2&gt;Memberships and Leadership&lt;/h2&gt;</p>
