--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p><strong>Major:</strong> Applied and Computational Mathematics and Statistics (ACMS)</p>
         <p><strong>Contact:</strong> fgarret2@nd.edu | +1 (312) 978-5485</p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/felipe-garrett-larrabure/" target="_blank">Felipe Garrett's LinkedIn</a></p>
-        <img src=“PERSONAL.jpg” alt="Felipe Garrett Personal Picture">
+        <img src=“images/PERSONAL.jpg” alt="Felipe Garrett Personal Picture">
     </section>
     <section>
         <h2>Education</h2>
@@ -86,7 +86,7 @@
         <div>
             <h3>Banco Nacional de Bolivia</h3>
             <p>Fixed mathematical models for RORAC systems.</p>
-            <img src=“BNB.jpg” alt="Banco Nacional de Bolivia">
+            <img src=“images/BNB.jpg” alt="Banco Nacional de Bolivia">
         </div>
         <div>
             <h3>Fundación SOLYDES</h3>
@@ -96,7 +96,7 @@
         <div>
             <h3>Student International Business Council (SIBC) - PwC Travel Team</h3>
             <p>Developed and presented a market entry plan for a cyber insurance company in the US.</p>
-            <img src="images/SIBC.”jpg alt="SIBC Logo">
+            <img src="images/SIBC.jpg" alt="SIBC Logo">
         </div>
     </section>
     <section>
@@ -112,7 +112,7 @@
         <h2>Athletics</h2>
         <p>Professional Soccer Player for Club The Strongest, Bolivian Professional Soccer League.</p>
         <p>Captain of the Reserve Team: Led the pre-professional team.</p>
-        <img src=“SOCCER.jpg” alt="Felipe Garrett Playing Soccer">
+        <img src=“images/SOCCER.jpg” alt="Felipe Garrett Playing Soccer">
     </section>
     <section>
         <h2>Memberships and Leadership</h2>
