--- a/index.html
+++ b/index.html
@@ -110,22 +110,23 @@
     </section>
     <section>
         <h2>Athletics</h2>
-        <p>Professional Soccer Player for Club The Strongest, Bolivian Professional Soccer League.</p>
+        <p>Professional Soccer Player for Club The Strongest, Bolivian Professional Soccer League Champion.</p>
         <p>Captain of the Reserve Team: Led the pre-professional team.</p>
         <img src=“images/SOCCER.jpg” alt="Felipe Garrett Playing Soccer">
     </section>
     <section>
         <h2>Memberships and Leadership</h2>
         <div class="memberships">
-            <p>Association of Latino Professionals for America: Member.</p>
-            <p>Latino Honor Society: Leader fostering cultural awareness.</p>
-            <p>Health Awareness Organization: Initiatives for mental health support.</p>
+            <p>Association of Latino Professionals for America: Part of the first national Latino professional association, with 81,000+ members, offering access to 50,000+ internships, dedicated
+to being the preferred partner for companies hiring Latino talent.</p>
+            <p>Latino Honor Society: Engaged in leadership initiatives, fostering cultural awareness within the Latino community in the US.</p>
+            <p>Health Awareness Organization: Leader of a nationwide school club to support students’ wellness and mental health during the pandemic.</p>
         </div>
     </section>
     <section>
         <h2>Skills and Interests</h2>
         <div class="skills">
-            <p><strong>Skills:</strong> CAS, Python, Microsoft Office</p>
+            <p><strong>Skills:</strong> CAS, Python, Microsoft Office, HTML</p>
             <p><strong>Languages:</strong> Spanish (Native), English (Fluent), German (Proficient)</p>
             <p><strong>Interests:</strong> History (20th Century), Bible Studies, Geometry, Professional Chess, Professional Soccer</p>
         </div>
