--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
     <section>
         <h2>Memberships and Leadership</h2>
         <div class="memberships">
-            <p>Association of Latino Professionals for America: Part of the first national Latino professional association, with 81,000+ members, offering access to 50,000+ internships, dedicated
+            <p>Association of Latino Professionals for America:</strong> Part of the first national Latino professional association, with 81,000+ members, offering access to 50,000+ internships, dedicated
 to being the preferred partner for companies hiring Latino talent.</p>
-            <p>Latino Honor Society: Engaged in leadership initiatives, fostering cultural awareness within the Latino community in the US.</p>
-            <p>Health Awareness Organization: Leader of a nationwide school club to support students’ wellness and mental health during the pandemic.</p>
+            <p>Latino Honor Society:</strong> Engaged in leadership initiatives, fostering cultural awareness within the Latino community in the US.</p>
+            <p>Health Awareness Organization:</strong> Leader of a nationwide school club to support students’ wellness and mental health during the pandemic.</p>
         </div>
     </section>
     <section>
