--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p><strong>Major:</strong> Applied and Computational Mathematics and Statistics (ACMS)</p>
         <p><strong>Contact:</strong> fgarret2@nd.edu | +1 (312) 978-5485</p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/felipe-garrett-larrabure/" target="_blank">Felipe Garrett's LinkedIn</a></p>
-        <img src=“images/PERSONAL.jpg” alt="Felipe Garrett Personal Picture">
+        <img src="images/PERSONAL.jpg" alt="Felipe Garrett Personal Picture">
     </section>
     <section>
         <h2>Education</h2>
@@ -86,7 +86,7 @@
         <div>
             <h3>Banco Nacional de Bolivia</h3>
             <p>Fixed mathematical models for RORAC systems.</p>
-            <img src=“images/BNB.jpg” alt="Banco Nacional de Bolivia">
+            <img src="images/BNB.jpg" alt="Banco Nacional de Bolivia">
         </div>
         <div>
             <h3>Fundación SOLYDES</h3>
@@ -103,7 +103,7 @@
         <h2>Tutoring</h2>
         <div class="tutoring">
             <p><strong>Learning Resource Center:</strong> Mathematics Tutor for Precalculus and Calculus.</p>
-            <img src="images/LRC.jpg” alt="Learning Resource Center">
+            <img src="images/LRC.jpg" alt="Learning Resource Center">
             <p><strong>Center of the Study of Languages and Cultures:</strong> Spanish Tutor for courses from levels 100 to 400.</p>
             <img src="images/cslc.png" alt="CSLC Logo">
         </div>
@@ -112,7 +112,7 @@
         <h2>Athletics</h2>
         <p>Professional Soccer Player for Club The Strongest, Bolivian Professional Soccer League Champion.</p>
         <p>Captain of the Reserve Team: Led the pre-professional team.</p>
-        <img src=“images/SOCCER.jpg” alt="Felipe Garrett Playing Soccer">
+        <img src="images/SOCCER.jpg" alt="Felipe Garrett Playing Soccer">
     </section>
     <section>
         <h2>Memberships and Leadership</h2>
