--- a/index.html
+++ b/index.html
@@ -64,16 +64,17 @@
         <h2>Personal Information</h2>
         <p><strong>Date of Birth:</strong> 20th July 2004</p>
         <p><strong>Origin:</strong> La Paz, Bolivia</p>
-        <p><strong>Current Location:</strong> University of Notre Dame, United States</p>
+        <p><strong>Current Location:</strong> Notre Dame, Indiana, United States</p>
         <p><strong>Major:</strong> Applied and Computational Mathematics and Statistics (ACMS)</p>
+        <p><strong>Minor:</strong> Business (ACMS)</p>
         <p><strong>Contact:</strong> fgarret2@nd.edu | +1 (312) 978-5485</p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/felipe-garrett-larrabure/" target="_blank">Felipe Garrett's LinkedIn</a></p>
         <img src="PERSONAL.jpg" alt="Felipe Garrett Personal Picture"
     </section>
     <section>
         <h2>Education</h2>
-        <p><strong>University of Notre Dame:</strong> Major in Applied and Computational Mathematics and Statistics, Minor in Business (GPA: 3.8, Expected Graduation: May 2027)</p>
         <p><strong>German School La Paz:</strong> Valedictorian with the highest grade in the last ten years (GPA: 4.0/4.0)</p>
+        <p><strong>University of Notre Dame:</strong> Major in Applied and Computational Mathematics and Statistics, Minor in Business (GPA: 3.8, Expected Graduation: May 2027)</p>
         <img src="images/Panoramic.jpg" alt="Notre Dame">
     </section>
     <section>
@@ -86,7 +87,7 @@
         <div>
             <h3>Banco Nacional de Bolivia</h3>
             <p>Fixed mathematical models for RORAC systems.</p>
-            <img src="BNB.jpg" alt="Banco Nacional de Bolivia">
+            <img src="images/BNB.jpg" alt="Banco Nacional de Bolivia">
         </div>
         <div>
             <h3>Fundación SOLYDES</h3>
@@ -105,21 +106,23 @@
             <p><strong>Learning Resource Center:</strong> Mathematics Tutor for Precalculus and Calculus.</p>
             <img src="images/LRC.jpg" alt="Learning Resource Center">
             <p><strong>Center of the Study of Languages and Cultures:</strong> Spanish Tutor for courses from levels 100 to 400.</p>
-            <img src="LRC.jpg" alt="Learning Resource Center">
+            <img src="images/cslc.png" alt="The Center for the Study of Languages and Cultures">
         </div>
     </section>
     <section>
         <h2>Athletics</h2>
         <p>Professional Soccer Player for Club The Strongest, Bolivian Professional Soccer League Champion.</p>
         <p>Captain of the Reserve Team: Led the pre-professional team.</p>
-        <img src="SOCCER.jpg" alt="Felipe Garrett Playing Soccer">
+        <img src="images/SOCCER.jpg" alt="Felipe Garrett Playing Soccer">
     </section>
     <section>
         <h2>Memberships and Leadership</h2>
         <div class="memberships">
             <p><strong>Association of Latino Professionals for America:</strong> Part of the first national Latino professional association, with 81,000+ members, offering access to 50,000+ internships, dedicated
 to being the preferred partner for companies hiring Latino talent.</p>
+            </div>
             <p><strong>Latino Honor Society:</strong> Engaged in leadership initiatives, fostering cultural awareness within the Latino community in the US.</p>
+            </div>
             <p><strong>Health Awareness Organization:</strong> Leader of a nationwide school club to support students’ wellness and mental health during the pandemic.</p>
         </div>
     </section>
