--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
         <p><strong>Minor:</strong> Business (ACMS)</p>
         <p><strong>Contact:</strong> fgarret2@nd.edu | +1 (312) 978-5485</p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/felipe-garrett-larrabure/" target="_blank">Felipe Garrett's LinkedIn</a></p>
-        <img src="PERSONAL.jpg" alt="Felipe Garrett Personal Picture"
+        <img src="images/PERSONAL.jpg" alt="Felipe Garrett Personal Picture"
     </section>
     <section>
         <h2>Education</h2>
         <p><strong>German School La Paz:</strong> Valedictorian with the highest grade in the last ten years (GPA: 4.0/4.0)</p>
+        </div>
         <p><strong>University of Notre Dame:</strong> Major in Applied and Computational Mathematics and Statistics, Minor in Business (GPA: 3.8, Expected Graduation: May 2027)</p>
         <img src="images/Panoramic.jpg" alt="Notre Dame">
     </section>
