--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <p><strong>Origin:</strong> La Paz, Bolivia</p>
         <p><strong>Current Location:</strong> Notre Dame, Indiana, United States</p>
         <p><strong>Major:</strong> Applied and Computational Mathematics and Statistics (ACMS)</p>
-        <p><strong>Minor:</strong> Business (ACMS)</p>
+        <p><strong>Minor:</strong> Business</p>
         <p><strong>Contact:</strong> fgarret2@nd.edu | +1 (312) 978-5485</p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/felipe-garrett-larrabure/" target="_blank">Felipe Garrett's LinkedIn</a></p>
         <img src="images/PERSONAL.jpg" alt="Felipe Garrett Personal Picture"
